--- a/src/css/index.css
+++ b/src/css/index.css
@@ -584,20 +584,12 @@ video {
   bottom: 0px;
 }
 
-.-bottom-1 {
-  bottom: -0.25rem;
-}
-
 .left-1\/2 {
   left: 50%;
 }
 
 .z-20 {
   z-index: 20;
-}
-
-.-z-10 {
-  z-index: -10;
 }
 
 .m-4 {
@@ -615,6 +607,10 @@ video {
 
 .mb-4 {
   margin-bottom: 1rem;
+}
+
+.mb-6 {
+  margin-bottom: 1.5rem;
 }
 
 .mb-12 {
@@ -641,12 +637,12 @@ video {
   display: none;
 }
 
-.h-4 {
-  height: 1rem;
+.h-96 {
+  height: 24rem;
 }
 
-.w-36 {
-  width: 9rem;
+.h-full {
+  height: 100%;
 }
 
 .w-40 {
@@ -768,12 +764,20 @@ video {
   }
 }
 
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
 .grid-cols-4 {
   grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 
 .flex-col {
   flex-direction: column;
+}
+
+.items-start {
+  align-items: flex-start;
 }
 
 .items-center {
@@ -786,6 +790,10 @@ video {
 
 .gap-6 {
   gap: 1.5rem;
+}
+
+.gap-8 {
+  gap: 2rem;
 }
 
 .overflow-hidden {
@@ -874,6 +882,14 @@ video {
   padding-bottom: 1.5rem;
 }
 
+.pr-8 {
+  padding-right: 2rem;
+}
+
+.pl-4 {
+  padding-left: 1rem;
+}
+
 .text-center {
   text-align: center;
 }
@@ -881,6 +897,11 @@ video {
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .text-3xl {
@@ -898,6 +919,14 @@ video {
 
 .capitalize {
   text-transform: capitalize;
+}
+
+.leading-relaxed {
+  line-height: 1.625;
+}
+
+.tracking-wide {
+  letter-spacing: 0.025em;
 }
 
 .text-white {
@@ -928,6 +957,10 @@ video {
 .text-green-500 {
   --tw-text-opacity: 1;
   color: rgba(16, 185, 129, var(--tw-text-opacity));
+}
+
+.text-opacity-90 {
+  --tw-text-opacity: 0.9;
 }
 
 *, ::before, ::after {
@@ -981,6 +1014,10 @@ video {
           filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
+.blur-sm {
+  --tw-blur: blur(4px);
+}
+
 .blur {
   --tw-blur: blur(8px);
 }
@@ -1017,6 +1054,23 @@ video {
 
 .theme-color{
   background: linear-gradient(0.25turn, #90cea1,#3cbec9,#00b3e5);
+}
+
+.title{
+  position: relative;
+  width: -webkit-max-content;
+  width: max-content;
+}
+
+.title::after{
+  position: absolute;
+  bottom: -0.25rem;
+  z-index: -10;
+  display: block;
+  height: 1rem;
+  background: linear-gradient(0.25turn, #90cea1,#3cbec9,#00b3e5);
+  content:'';
+  width: calc(100% + .5rem);
 }
 
 .activity{
@@ -1065,6 +1119,10 @@ video {
 @media (min-width: 1024px) {
   .lg\:mb-8 {
     margin-bottom: 2rem;
+  }
+
+  .lg\:w-3\/4 {
+    width: 75%;
   }
 }
 
