--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -5,7 +5,14 @@
 .theme-color{
   background: linear-gradient(0.25turn, #90cea1,#3cbec9,#00b3e5);
 }
-
+.title{
+  @apply w-max relative;
+}
+.title::after{
+  @apply absolute block theme-color h-4 -bottom-1 -z-10 ;
+  content:'';
+  width: calc(100% + .5rem);
+}
 .activity{
   @apply absolute -left-1/4 h-full w-1/3 bg-gradient-to-r from-gray-800  to-gray-700;
  animation: loading 1s infinite;
