--- a/src/css/index.css
+++ b/src/css/index.css
@@ -601,11 +601,6 @@ video {
   margin-right: auto;
 }
 
-.my-8 {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-}
-
 .mt-4 {
   margin-top: 1rem;
 }
@@ -640,6 +635,10 @@ video {
 
 .hidden {
   display: none;
+}
+
+.h-48 {
+  height: 12rem;
 }
 
 .h-96 {
@@ -889,6 +888,10 @@ video {
 
 .pr-8 {
   padding-right: 2rem;
+}
+
+.pb-4 {
+  padding-bottom: 1rem;
 }
 
 .pl-4 {
